// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering structure should output correct tree 1`] = `
<Div
  className="container button-appearance default theme-default"
  onMouseDown={[MockFunction]}
  onMouseOut={[MockFunction]}
  onMouseOver={[MockFunction]}
  onMouseUp={[MockFunction]}
>
  <AccessibleButton
    buttonAttributes={
      Object {
        "data-track-component": "SecondaryButton",
      }
    }
    className="button"
    isToggleButton={false}
    label=""
    onClick={[Function]}
  >
    <Inline
      alignItems="center"
      scale="xs"
    >
      <span />
    </Inline>
  </AccessibleButton>
</Div>
`;

exports[`rendering with icon should output correct tree 1`] = `
<Div
  className="container button-appearance default theme-default"
  onMouseDown={[MockFunction]}
  onMouseOut={[MockFunction]}
  onMouseOver={[MockFunction]}
  onMouseUp={[MockFunction]}
>
  <AccessibleButton
    buttonAttributes={
      Object {
        "data-track-component": "SecondaryButton",
      }
    }
    className="button"
    isToggleButton={false}
    label=""
    onClick={[Function]}
  >
    <Inline
      alignItems="center"
      scale="xs"
    >
      <span
        className="icon-container"
      >
        <FilterIcon
          size="small"
        />
      </span>
      <span />
    </Inline>
  </AccessibleButton>
</Div>
`;
